--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
+    id 'checkstyle'
 }
 
 group 'org.example'
@@ -13,6 +14,7 @@ repositories {
 }
 
 dependencies {
+    implementation("com.github.fracpete:rsync4j:3.1.2-8")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
