--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,11 @@ repositories {
 }
 
 dependencies {
-    implementation("com.github.fracpete:rsync4j:3.1.2-8")
+    implementation "com.github.fracpete:rsync4j:3.1.2-8"
+    implementation "org.yaml:snakeyaml:1.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.junit.jupiter:junit-jupiter-params:5.2.0"
 }
 
 compileKotlin {
