--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
-    id 'checkstyle'
+    id("org.jlleitschuh.gradle.ktlint") version "9.2.1"
 }
 
 group 'org.example'
