--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
     id("org.jlleitschuh.gradle.ktlint") version "9.2.1"
+    id "com.github.johnrengelman.shadow" version "5.2.0"
 }
 
 group 'org.example'
@@ -17,8 +18,9 @@ dependencies {
     implementation "com.github.fracpete:rsync4j:3.1.2-8"
     implementation "org.yaml:snakeyaml:1.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile "org.junit.jupiter:junit-jupiter-params:5.2.0"
+    implementation "commons-cli:commons-cli:1.3.1"
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.2.0"
 }
 
 compileKotlin {
@@ -26,4 +28,12 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+task jarBackupToHardDrive(type: Jar, dependsOn: shadowJar) {
+    archiveFileName = "backupToHardDrive.jar"
+    manifest {
+        attributes 'Main-Class': 'executable.BackupToHardDrive'
+    }
+    from zipTree(shadowJar.archiveFile)
 }
