--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     implementation "org.yaml:snakeyaml:1.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "commons-cli:commons-cli:1.3.1"
+    implementation "com.google.inject:guice:4.0"
+
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.2.0"
 }
@@ -34,6 +36,14 @@ task jarBackupToHardDrive(type: Jar, dependsOn: shadowJar) {
     archiveFileName = "backupToHardDrive.jar"
     manifest {
         attributes 'Main-Class': 'executable.BackupToHardDrive'
+    }
+    from zipTree(shadowJar.archiveFile)
+}
+
+task jarBackupTool(type: Jar, dependsOn: shadowJar) {
+    archiveFileName = "backuptool.jar"
+    manifest {
+        attributes 'Main-Class': 'com.derek.backuptool.Main'
     }
     from zipTree(shadowJar.archiveFile)
 }
