--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     implementation "org.yaml:snakeyaml:1.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "commons-cli:commons-cli:1.3.1"
+    implementation "com.google.inject:guice:4.0"
+    implementation "org.apache.logging.log4j:log4j-api:2.13.1"
+    implementation "org.apache.logging.log4j:log4j-core:2.13.1"
+
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.2.0"
 }
@@ -30,10 +34,10 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-task jarBackupToHardDrive(type: Jar, dependsOn: shadowJar) {
-    archiveFileName = "backupToHardDrive.jar"
+task jarBackupTool(type: Jar, dependsOn: shadowJar) {
+    archiveFileName = "backuptool.jar"
     manifest {
-        attributes 'Main-Class': 'executable.BackupToHardDrive'
+        attributes 'Main-Class': 'com.derek.backuptool.Main'
     }
     from zipTree(shadowJar.archiveFile)
 }
