--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@ repositories {
 }
 
 dependencies {
-    implementation "com.github.fracpete:rsync4j:3.1.2-8"
     implementation "org.yaml:snakeyaml:1.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "commons-cli:commons-cli:1.3.1"
@@ -24,7 +23,13 @@ dependencies {
     implementation "org.apache.logging.log4j:log4j-core:2.13.1"
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.2.0"
+    testImplementation "org.assertj:assertj-core:3.11.1"
+}
+
+test {
+    useJUnitPlatform()
 }
 
 compileKotlin {
